--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Coba Git Remote</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, repellat.</p>
 </body>
 
 </html>
